# back-end/src/go/model_inline_object.go
@@ -1,0 +1,21 @@
+/*
+ * Kico API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"os"
+)
+
+type InlineObject struct {
+
+	Title string `json:"title,omitempty"`
+
+	FileName *os.File `json:"fileName,omitempty"`
+}
